manifests/my-app/my-app.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - -text=OK
          ports:
            - name: http
              containerPort: 5678
