manifests/my-app/my-app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/component: server
