manifests/my-app/my-app.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: my-int-ca
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: my-app-basic-auth
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: my-app
spec:
  rules:
    - host: app.my.example
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-app
                port:
                  name: http
  tls:
    - hosts:
        - app.my.example
      secretName: my-app-tls
